--- a/detail.html
+++ b/detail.html
@@ -5,6 +5,7 @@
   <title>Amphora Detail</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.4/css/bulma.min.css" integrity="sha512-yh2RE0wZCVZeysGiqTwDTO/dKelCbS9bP2L94UvOFtl/FKXcNAje3Y2oBg/ZMZ3LS1sicYk4dYVGtDex75fvvA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
 
@@ -19,6 +20,20 @@
 
   </div>
 </section>
+
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>WetNote</strong> by <a href="https://nevcan.com" target="_blank">Nevcan Uludaş</a>.
+      The source code is licensed <a href="https://opensource.org/license/mit" target="_blank">MIT</a>.
+    </p>
+
+    <p>
+      Data sources: <a href="https://potsherd.net/atlas/Class/AMPH" target="_blank">Potsherd Atlas</a>, <a href="https://archaeologydataservice.ac.uk/archives/view/archaide_2019/downloads_amphora.cfm" target="_blank">ArchAIDE ADS Amphora Dataset</a>
+    </p>
+
+  </div>
+</footer>
 
 <script src="script/detail.js"></script>
 
