--- a/index.html
+++ b/index.html
@@ -6,148 +6,158 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.4/css/bulma.min.css" integrity="sha512-yh2RE0wZCVZeysGiqTwDTO/dKelCbS9bP2L94UvOFtl/FKXcNAje3Y2oBg/ZMZ3LS1sicYk4dYVGtDex75fvvA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 </head>
 <body>
 
-<section class="section">
-  <div class="container">
-    <h1 class="title">Amphora Types</h1>
-    <div id="filterSection" class="box mb-5">
-      <h3 class="title is-5">Filter Amphoras by Characteristics</h3>
-      <div class="field is-horizontal">
-        <div class="field mr-2">
-          <label class="label">Rim Type</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterRim">
-                <option value="">Select</option>
-                <option value="Beaded">Beaded</option>
-                <option value="Biconical">Biconical</option>
-                <option value="Collar">Collar</option>
-                <option value="Everted">Everted</option>
-                <option value="Flanged">Flanged</option>
-                <option value="Flaring">Flaring</option>
-                <option value="None">None</option>
-                <option value="Pulley wheel">Pulley wheel</option>
-                <option value="Rounded">Rounded</option>
-                <option value="Triangular">Triangular</option>
-              </select>
-            </div>
-          </div>
-        </div>
+<!-- FILTER SECTION -->
+<div id="filterSection" class="has-background-dark p-5">
+  <h3 class="title is-5">Filter Amphoras by Characteristics</h3>
+  <div class="field is-horizontal">
+    <div class="field mr-2">
+      <label class="label">Rim Type</label>
+      <div class="control">
+        <select id="filterRim" class="rim-select" style="width:200px;">
+          <option value="">Select</option>
+          <option value="beaded" data-img="img/filter/rim_beaded.jpg">Beaded</option>
+          <option value="biconical" data-img="img/filter/rim_biconical.jpg">Biconical</option>
+          <option value="collar" data-img="img/filter/rim_collar.jpg">Collar</option>
+          <option value="everted" data-img="img/filter/rim_everted.jpg">Everted</option>
+          <option value="flanged" data-img="img/filter/rim_flanged.jpg">Flanged</option>
+          <option value="flaring" data-img="img/filter/rim_flaring.jpg">Flaring</option>
+          <option value="none" data-img="img/filter/rim_none.jpg">None</option>
+          <option value="pulley-wheel" data-img="img/filter/rim_pulleyWheel.jpg">Pulley wheel</option>
+          <option value="rounded" data-img="img/filter/rim_rounded.jpg">Rounded</option>
+          <option value="triangular" data-img="img/filter/rim_triangular.jpg">Triangular</option>
+        </select>
+      </div>
+    </div>
 
-        <div class="field mr-2">
-          <label class="label">Shoulder Type</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterShoulder">
-                <option value="">Select</option>
-                <option value="Carinated">Carinated</option>
-                <option value="None/smooth">None/smooth</option>
-                <option value="Rounded">Rounded</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="field mr-2">
-          <label class="label">Handles in Profile</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterHandlesProfile">
-                <option value="">Select</option>
-                <option value="Arched">Arched</option>
-                <option value="Bowed">Bowed</option>
-                <option value="Curved">Curved</option>
-                <option value="Ear-shaped">Ear-shaped</option>
-                <option value="Long vertical">Long vertical</option>
-                <option value="Peaked">Peaked</option>
-                <option value="Ring">Ring</option>
-                <option value="Short vertical">Short vertical</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="field mr-2">
-          <label class="label">Handles in Section</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterHandlesSection">
-                <option value="">Select</option>
-                <option value="Bifid">Bifid</option>
-                <option value="Grooved">Grooved</option>
-                <option value="Ovoid/Elliptical">Ovoid/Elliptical</option>
-                <option value="Ridged">Ridged</option>
-                <option value="Round">Round</option>
-                <option value="Semi-circular">Semi-circular</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="field mr-2">
-          <label class="label">Neck Type</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterNeck">
-                <option value="">Select</option>
-                <option value="Broad/wide">Broad/wide</option>
-                <option value="Conical">Conical</option>
-                <option value="Cylindrical">Cylindrical</option>
-                <option value="Hourglass">Hourglass</option>
-                <option value="None">None</option>
-                <option value="Short/narrow">Short/narrow</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="field mr-2">
-          <label class="label">Body Type</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterBody">
-                <option value="">Select</option>
-                <option value="Cylindrical">Cylindrical</option>
-                <option value="Globular">Globular</option>
-                <option value="Narrow">Narrow</option>
-                <option value="Ovoid">Ovoid</option>
-                <option value="Piriform">Piriform</option>
-                <option value="Tapered">Tapered</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="field">
-          <label class="label">Base Type</label>
-          <div class="control">
-            <div class="select">
-              <select id="filterBase">
-                <option value="">Select</option>
-                <option value="Button">Button</option>
-                <option value="Cylindrical">Cylindrical</option>
-                <option value="Flared">Flared</option>
-                <option value="Flat">Flat</option>
-                <option value="Knobbed">Knobbed</option>
-                <option value="Long hollow">Long hollow</option>
-                <option value="Pointed">Pointed</option>
-                <option value="Ringed">Ringed</option>
-                <option value="Rounded">Rounded</option>
-                <option value="Rounded basal point">Rounded basal point</option>
-                <option value="Short hollow">Short hollow</option>
-                <option value="Spike/tapered">Spike/tapered</option>
-              </select>
-            </div>
-          </div>
+    <div class="field mr-2">
+      <label class="label">Shoulder Type</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterShoulder">
+            <option value="">Select</option>
+            <option value="Carinated">Carinated</option>
+            <option value="None/smooth">None/smooth</option>
+            <option value="Rounded">Rounded</option>
+          </select>
         </div>
       </div>
     </div>
+
+    <div class="field mr-2">
+      <label class="label">Handles in Profile</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterHandlesProfile" disabled>
+            <option value="">Select</option>
+            <option value="Arched">Arched</option>
+            <option value="Bowed">Bowed</option>
+            <option value="Curved">Curved</option>
+            <option value="Ear-shaped">Ear-shaped</option>
+            <option value="Long vertical">Long vertical</option>
+            <option value="Peaked">Peaked</option>
+            <option value="Ring">Ring</option>
+            <option value="Short vertical">Short vertical</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field mr-2">
+      <label class="label">Handles in Section</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterHandlesSection" disabled>
+            <option value="">Select</option>
+            <option value="Bifid">Bifid</option>
+            <option value="Grooved">Grooved</option>
+            <option value="Ovoid/Elliptical">Ovoid/Elliptical</option>
+            <option value="Ridged">Ridged</option>
+            <option value="Round">Round</option>
+            <option value="Semi-circular">Semi-circular</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field mr-2">
+      <label class="label">Neck Type</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterNeck" disabled>
+            <option value="">Select</option>
+            <option value="Broad/wide">Broad/wide</option>
+            <option value="Conical">Conical</option>
+            <option value="Cylindrical">Cylindrical</option>
+            <option value="Hourglass">Hourglass</option>
+            <option value="None">None</option>
+            <option value="Short/narrow">Short/narrow</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field mr-2">
+      <label class="label">Body Type</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterBody" disabled>
+            <option value="">Select</option>
+            <option value="Cylindrical">Cylindrical</option>
+            <option value="Globular">Globular</option>
+            <option value="Narrow">Narrow</option>
+            <option value="Ovoid">Ovoid</option>
+            <option value="Piriform">Piriform</option>
+            <option value="Tapered">Tapered</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field">
+      <label class="label">Base Type</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterBase" disabled>
+            <option value="">Select</option>
+            <option value="Button">Button</option>
+            <option value="Cylindrical">Cylindrical</option>
+            <option value="Flared">Flared</option>
+            <option value="Flat">Flat</option>
+            <option value="Knobbed">Knobbed</option>
+            <option value="Long hollow">Long hollow</option>
+            <option value="Pointed">Pointed</option>
+            <option value="Ringed">Ringed</option>
+            <option value="Rounded">Rounded</option>
+            <option value="Rounded basal point">Rounded basal point</option>
+            <option value="Short hollow">Short hollow</option>
+            <option value="Spike/tapered">Spike/tapered</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field ml-2" style="align-self:flex-end; padding-bottom: 13px;">
+      <button id="clearFilters" class="button is-dark">
+        <span>Clear Filters</span>
+      </button>
+    </div>
+
+  </div>
+</div>
+
+<section class="section">
+  <div class="container"></div>
     <div id="amphoraList" class="columns is-multiline"></div>
   </div>
 </section>
 
+<!-- SCRIPTS -->
 <script src="script/catalogue.js"></script>
 <script src="script/filter.js"></script>
 
