--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <label class="label">Handles in Profile</label>
       <div class="control">
         <div class="select">
-          <select id="filterHandlesProfile" disabled>
+          <select id="filterHandlesProfile">
             <option value="">Select</option>
             <option value="Arched">Arched</option>
             <option value="Bowed">Bowed</option>
@@ -77,7 +77,7 @@
       <label class="label">Handles in Section</label>
       <div class="control">
         <div class="select">
-          <select id="filterHandlesSection" disabled>
+          <select id="filterHandlesSection">
             <option value="">Select</option>
             <option value="Bifid">Bifid</option>
             <option value="Grooved">Grooved</option>
@@ -94,7 +94,7 @@
       <label class="label">Neck Type</label>
       <div class="control">
         <div class="select">
-          <select id="filterNeck" disabled>
+          <select id="filterNeck">
             <option value="">Select</option>
             <option value="Broad/wide">Broad/wide</option>
             <option value="Conical">Conical</option>
@@ -111,7 +111,7 @@
       <label class="label">Body Type</label>
       <div class="control">
         <div class="select">
-          <select id="filterBody" disabled>
+          <select id="filterBody">
             <option value="">Select</option>
             <option value="Cylindrical">Cylindrical</option>
             <option value="Globular">Globular</option>
@@ -128,7 +128,7 @@
       <label class="label">Base Type</label>
       <div class="control">
         <div class="select">
-          <select id="filterBase" disabled>
+          <select id="filterBase">
             <option value="">Select</option>
             <option value="Button">Button</option>
             <option value="Cylindrical">Cylindrical</option>
