Fix, basic filters

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <div class="select">
           <select id="filterShoulder">
             <option value="">Select</option>
-            <option value="Carinated">Carinated</option>
-            <option value="None/smooth">None/smooth</option>
-            <option value="Rounded">Rounded</option>
+            <option value="carinated">Carinated</option>
+            <option value="none/smooth">None/smooth</option>
+            <option value="rounded">Rounded</option>
           </select>
         </div>
       </div>
@@ -58,7 +58,7 @@
       <label class="label">Handles in Profile</label>
       <div class="control">
         <div class="select">
-          <select id="filterHandlesProfile">
+          <select id="filterHandleProfile">
             <option value="">Select</option>
             <option value="Arched">Arched</option>
             <option value="Bowed">Bowed</option>
@@ -77,7 +77,7 @@
       <label class="label">Handles in Section</label>
       <div class="control">
         <div class="select">
-          <select id="filterHandlesSection">
+          <select id="filterHandleSection">
             <option value="">Select</option>
             <option value="Bifid">Bifid</option>
             <option value="Grooved">Grooved</option>
