--- a/catalogue.html
+++ b/catalogue.html
@@ -17,6 +17,52 @@
 </head>
 <body>
 
+<!-- NAVIGATION BAR -->
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand px-5">
+    <a class="navbar-item has-text-white" href="https://bulma.io">
+      <i class="fa-solid fa-trophy mr-2"></i>
+      <strong>WetNote</strong>
+    </a>
+
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" href="index.html">Home</a>
+      <a class="navbar-item" href="documentation.html">Documentation</a>
+      <a class="navbar-item" href="catalogue.html">Catalogue</a>
+
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">More</a>
+
+        <div class="navbar-dropdown">
+          <a class="navbar-item" href="about.html">About</a>
+          <a class="navbar-item" href="jobs.html">Jobs</a>
+          <a class="navbar-item" href="contact.html">Contact</a>
+          <hr class="navbar-divider">
+          <a class="navbar-item" href="report.html">Report an issue</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button is-info" href="amphorai.html"><strong>AmphorAI</strong></a>
+          <a class="button is-light" href="login.html">Log in</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
 <!-- FILTER SECTION -->
 <div id="filterSection" class="has-background-dark p-5">
   <h3 class="title is-5">Filter Amphoras by Characteristics</h3>
