--- a/detail.html
+++ b/detail.html
@@ -11,7 +11,7 @@
 
 <section class="section">
   <div class="container">
-    <a href="index.html" class="button is-small is-light">
+    <a href="catalogue.html" class="button is-small is-light">
       <i class="fas fa-arrow-left"></i> Back to list
     </a>
 
