--- a/catalogue.html
+++ b/catalogue.html
@@ -20,7 +20,7 @@
 <!-- NAVIGATION BAR -->
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand px-5">
-    <a class="navbar-item has-text-white" href="https://bulma.io">
+    <a class="navbar-item has-text-white" href="index.html">
       <i class="fa-solid fa-trophy mr-2"></i>
       <strong>WetNote</strong>
     </a>
