--- a/documentation.html
+++ b/documentation.html
@@ -47,7 +47,7 @@
           <a class="navbar-item" href="jobs.html">Jobs</a>
           <a class="navbar-item" href="contact.html">Contact</a>
           <hr class="navbar-divider">
-          <a class="navbar-item" href="report.html">Report an issue</a>
+          <a class="navbar-item" href="https://docs.google.com/forms/d/e/1FAIpQLSfbTx27QH2m3SD-bia105rbArpOyCsnMBsDlagzJQ3V-eI3wA/viewform?usp=publish-editor" target="_blank">Report an issue</a>
         </div>
       </div>
     </div>
