--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="box">
           <model-viewer src="data/models3d/dressel20/Dressel_20_D_001.glb" auto-rotate="" auto-rotate-delay="0" rotation-per-second="60deg" camera-controls="" camera-orbit="90deg" ar-status="not-presenting" style="width: 100%; height: 400px; background-color: #2e333d"></model-viewer>
           <p class="has-text-grey has-text-centered mt-3">
-            <a class="has-text-info" href="https://archaeologydataservice.ac.uk/archives/view/archaide_2019/downloads_amphora.cfm?amph=Agora_F65_66_DR571" target="_blank">
-              <strong>Agora F65 66 DR571</strong>
+            <a class="has-text-info" href="/detail.html?id=dressel-20" target="_self">
+              <strong>Dressel 20</strong>
             </a>
           </p>
         </div>
