Fix, amphorai page

--- a/detail.html
+++ b/detail.html
@@ -11,8 +11,8 @@
 
 <section class="section">
   <div class="container">
-    <a href="catalogue.html" class="button is-small is-light">
-      <i class="fas fa-arrow-left"></i> Back to list
+    <a href="catalogue.html" class="button is-small is-link is-light">
+      <i class="fas fa-arrow-left mr-2"></i> Back to list
     </a>
 
     <div id="details" class="section"></div>
