--- a/amphorai.html
+++ b/amphorai.html
@@ -83,11 +83,16 @@
             </label>
           </div>
         </div>
+
+        <p class="has-text-grey-light mt-6">
+          If you need a sample image for testing, you can download a dummy amphora photo 
+          <a href="img/dummy/Richborough 527 Amphora.jpeg" download>here</a>.
+        </p>
       </div>
 
       <!-- LEFT SIDE: preview -->
-      <div class="column is-6">
-        <div id="leftBox" class="box has-background-dark">
+      <div id="leftBox" class="column is-6" style="display: none;">
+        <div class="box has-background-dark">
           <h2 class="title is-5 has-text-white">Uploaded Image</h2>
           <figure id="uploadedImageContainer" class="image" style="display:none; width:100%; height:517px; background:#111; display:flex; align-items:center; justify-content:center; overflow:hidden;">
             <img id="uploadedImage" src="" alt="Uploaded preview" style="max-width:100%; max-height:100%; object-fit:contain; display:block;" />
@@ -98,8 +103,8 @@
       </div>
 
       <!-- RIGHT SIDE: analysis -->
-      <div class="column is-6">
-        <div id="rightBox" class="box has-background-dark">
+      <div id="rightBox" class="column is-6" style="display: none;">
+        <div class="box has-background-dark">
           <h2 class="title is-5 has-text-white">Analysis (Mock)</h2>
 
           <div id="analysisPreloader" style="display:none;">
@@ -110,14 +115,14 @@
 
           <div id="modelContainer" style="display:none; margin-top:1rem;">
             <p class="has-text-grey-light mb-3">Closest match (mock):</p>
-            <model-viewer id="resultModel" src="data/models3d/dressel20/Dressel_20_D_001.glb"
+            <model-viewer id="resultModel" src="data/models3d/richborough527/DRRICH1A.glb"
                           alt="Amphora model"
                           camera-controls
                           auto-rotate
                           style="width:100%; height:420px; background:#111;">
             </model-viewer>
             <div id="resultInfo" class="content has-text-grey-light mt-3">
-              <strong>Match:</strong> Dressel 20<br>
+              <strong>Match:</strong> Richborough 527<br>
               <strong>Confidence:</strong> 87% (mock)
             </div>
           </div>
