Add, shoulder type images

--- a/documentation.html
+++ b/documentation.html
@@ -65,9 +65,10 @@
 
 <div class="container">
   <section class="section">
+    <h1 class="title">Documentation</h1>
+
     <div class="columns is-multiline">
-      <div class="column is-6">
-        <h1 class="title mb-4">Documentation</h1>
+      <div class="column is-12">
         <p class="mb-5">
           This documentation provides a practical guide to understanding amphora morphology, typological comparison, and effective use of the filtering system. 
           By learning how each shape component is defined — rim, neck, body, base, and handles — you can navigate the catalogue efficiently and identify amphora types with greater accuracy. 
@@ -80,9 +81,15 @@
           <li class="mb-3"><strong>4. Date the amphora using context and literature</strong> — Establish a chronological range supported by archaeological context, parallels, and published research. Add brief interpretative notes if needed.</li>
           <li class="mb-3"><strong>5. Create a catalogue entry and academic description</strong> — Record the amphora following academic standards, including dimensions, morphology, typology, dating, and references suitable for publication.</li>
         </ul>
+      </div>
+    </div>
+  </section>
+  
+  <hr>
 
-        <hr>
-
+  <section class="section">
+    <div class="columns is-multiline">
+      <div class="column is-12">
         <div class="content mt-4">
           <h3 class="title is-4">How to Use Filters Effectively</h3>
           <p>To help you identify amphora types accurately, the following guide explains each morphological element used in the filtering system. Understanding these forms will allow you to narrow down typologies quickly and consistently.</p>
@@ -134,10 +141,18 @@
           <div class="notification mt-6">
             <h4 class="title is-5">Shoulder Types</h4>
             <ul>
-              <li><strong>Rounded:</strong> Smooth, continuous curve transitioning from neck to body.</li>
-              <li><strong>Carinated:</strong> Sharp angular break between neck and body.</li>
-              <li><strong>Soft-rounded:</strong> Gentle curve, not fully rounded nor angular.</li>
-              <li><strong>None/Straight:</strong> Minimal shoulder definition; almost vertical profile.</li>
+              <li>
+                <img src="img/filter/shoulder_rounded.jpg" alt="Rounded Shoulder" class="mr-2" style="width:40px; height:auto; vertical-align:middle;">
+                <strong>Rounded:</strong> Smooth, continuous curve transitioning from neck to body.
+              </li>
+              <li>
+                <img src="img/filter/shoulder_carinated.jpg" alt="Carinated Shoulder" class="mr-2" style="width:40px; height:auto; vertical-align:middle;">
+                <strong>Carinated:</strong> Sharp angular break between neck and body.
+              </li>
+              <li>
+                <img src="img/filter/shoulder_noneSmooth.jpg" alt="None/Smooth Shoulder" class="mr-2" style="width:40px; height:auto; vertical-align:middle;">
+                <strong>None/Smooth:</strong> Minimal shoulder definition; almost vertical profile.
+              </li>
             </ul>
           </div>
 
