--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <a class="navbar-item" href="index.html">Home</a>
       <a class="navbar-item" href="documentation.html">Documentation</a>
       <a class="navbar-item" href="catalogue.html">Catalogue</a>
+      <a class="navbar-item" href="map.html">Map</a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">More</a>
