--- a/map.html
+++ b/map.html
@@ -66,52 +66,64 @@
 
 <div class="container">
   <section class="section">
-    <div class="columns is-multiline">
-      <div class="column is-12 has-text-centered">
-        <h1 class="title is-3">Contact Us</h1>
-        <p class="mb-5">
-          If you have questions, feedback, or would like to contribute to the Amphora Typology Database, feel free to reach out through any of the following channels.
-        </p>
+    <div id="amphoraMap" style="height: 600px; width: 100%;"></div>
 
-        <div class="buttons is-centered my-6">
-          <a class="button is-link is-light px-6" href="mailto:nev@gue.com">
-            <span class="icon is-size-1"><i class="fas fa-envelope"></i></span>
-            <span>Email</span>
-          </a>
+    <!-- Leaflet CSS and JS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-          <a class="button is-link px-6" href="https://hihello.com/p/2a5123b0-641a-4681-8852-c963488baf28" target="_blank">
-            <span class="icon is-size-1"><i class="fas fa-hand"></i></span>
-            <span>HiHello</span>
-          </a>
+    <script>
+      // Initialize map
+      const map = L.map('amphoraMap').setView([38.5, 26.5], 7); // center on Turkey/Mediterranean
 
-          <a class="button is-info px-6" href="https://www.linkedin.com/in/nevcanuludas" target="_blank">
-            <span class="icon is-size-1"><i class="fab fa-linkedin"></i></span>
-            <span>LinkedIn</span>
-          </a>
-        </div>
+      // Add OpenStreetMap tile layer
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap contributors'
+      }).addTo(map);
 
-        <div class="buttons is-centered my-6">
-          <a class="button is-warning px-6" href="https://instagram.com/nevcanuludas" target="_blank">
-            <span class="icon is-size-1"><i class="fab fa-instagram"></i></span>
-            <span>Instagram</span>
-          </a>
+      // Sample amphora data
+      const amphoras = [
+        {
+          name: "Dressel 20",
+          period: "Roman",
+          coordinates: [36.0, 27.0]
+        },
+        {
+          name: "Dressel 1",
+          period: "Roman",
+          coordinates: [38.0, 26.0]
+        },
+        {
+          name: "Byzantine Amphora",
+          period: "Byzantine",
+          coordinates: [37.5, 27.5]
+        },
+        {
+          name: "Hellenistic Amphora",
+          period: "Hellenistic",
+          coordinates: [39.0, 26.5]
+        }
+      ];
 
-          <a class="button is-dark px-6" href="https://github.com/nevcanuludas" target="_blank">
-            <span class="icon is-size-1"><i class="fab fa-github"></i></span>
-            <span>GitHub</span>
-          </a>
+      // Assign colors for periods
+      const periodColors = {
+        "Roman": "red",
+        "Byzantine": "blue",
+        "Hellenistic": "green"
+      };
 
-          <a class="button is-primary px-6" href="https://scholar.google.com/citations?user=DzEc7TgAAAAJ&hl=tr" target="_blank">
-            <span class="icon is-size-1"><i class="fab fa-google-scholar"></i></span>
-            <span>Google Scholar</span>
-          </a>
-        </div>
-
-        <p class="mt-5">
-          You can also follow the project updates and announcements on our social media channels.
-        </p>
-      </div>
-    </div>
+      // Add markers to map
+      amphoras.forEach(amp => {
+        const color = periodColors[amp.period] || "gray";
+        L.circleMarker(amp.coordinates, {
+          radius: 8,
+          color: color,
+          fillColor: color,
+          fillOpacity: 0.8
+        }).addTo(map)
+          .bindPopup(`<strong>${amp.name}</strong><br>Period: ${amp.period}`);
+      });
+    </script>
   </section>
 </div>
 
