--- a/map.html
+++ b/map.html
@@ -64,6 +64,47 @@
   </div>
 </nav>
 
+<div id="mapFilterSection" class="has-background-dark p-4 mb-4">
+  <h3 class="title is-5 has-text-white">Filter Amphoras on Map</h3>
+  <div class="field is-horizontal">
+
+    <div class="field mr-3">
+      <label class="label has-text-white">Period</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterMapPeriod">
+            <option value="">Select</option>
+            <option value="Roman">Roman</option>
+            <option value="Byzantine">Byzantine</option>
+            <option value="Hellenistic">Hellenistic</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field mr-3">
+      <label class="label has-text-white">Country / Kingdom</label>
+      <div class="control">
+        <div class="select">
+          <select id="filterMapCountry">
+            <option value="">Select</option>
+            <option value="Greece">Greece</option>
+            <option value="Turkey">Turkey</option>
+            <option value="Italy">Italy</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="field ml-3" style="align-self:flex-end; padding-bottom: 13px;">
+      <button id="clearMapFilters" class="button is-link is-light">
+        <span>Clear Filters</span>
+      </button>
+    </div>
+
+  </div>
+</div>
+
 <div class="container">
   <section class="section">
     <div id="amphoraMap" style="height: 600px; width: 100%;"></div>
@@ -72,58 +113,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-    <script>
-      // Initialize map
-      const map = L.map('amphoraMap').setView([38.5, 26.5], 7); // center on Turkey/Mediterranean
-
-      // Add OpenStreetMap tile layer
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '© OpenStreetMap contributors'
-      }).addTo(map);
-
-      // Sample amphora data
-      const amphoras = [
-        {
-          name: "Dressel 20",
-          period: "Roman",
-          coordinates: [36.0, 27.0]
-        },
-        {
-          name: "Dressel 1",
-          period: "Roman",
-          coordinates: [38.0, 26.0]
-        },
-        {
-          name: "Byzantine Amphora",
-          period: "Byzantine",
-          coordinates: [37.5, 27.5]
-        },
-        {
-          name: "Hellenistic Amphora",
-          period: "Hellenistic",
-          coordinates: [39.0, 26.5]
-        }
-      ];
-
-      // Assign colors for periods
-      const periodColors = {
-        "Roman": "red",
-        "Byzantine": "blue",
-        "Hellenistic": "green"
-      };
-
-      // Add markers to map
-      amphoras.forEach(amp => {
-        const color = periodColors[amp.period] || "gray";
-        L.circleMarker(amp.coordinates, {
-          radius: 8,
-          color: color,
-          fillColor: color,
-          fillOpacity: 0.8
-        }).addTo(map)
-          .bindPopup(`<strong>${amp.name}</strong><br>Period: ${amp.period}`);
-      });
-    </script>
   </section>
 </div>
 
@@ -136,6 +125,9 @@
     </p>
   </div>
 </footer>
+
+<!-- SCRIPTS -->
+<script src="script/map.js"></script>
 
 </body>
 </html>
