Fix, documentation page

--- a/documentation.html
+++ b/documentation.html
@@ -64,17 +64,22 @@
   </div>
 </nav>
 
-<div class="container">
+<!-- DOCUMENTATION -->
+<main class="container">
   <section class="section">
     <h1 class="title">Documentation</h1>
 
     <div class="columns is-multiline">
-      <div class="column is-12">
+
+      <div class="column-is-12">
         <p class="mb-5">
           This documentation provides a practical guide to understanding amphora morphology, typological comparison, and effective use of the filtering system. 
           By learning how each shape component is defined — rim, neck, body, base, and handles — you can navigate the catalogue efficiently and identify amphora types with greater accuracy. 
           Use this page as a reference while exploring the Amphora Typology Database or working on your own ceramic analyses.
         </p>
+      </div>
+
+      <div class="column is-7">
         <ul>
           <li class="mb-3"><strong>1. Perform a morphological description</strong> — Identify and describe all visible components of the amphora (rim, neck, body, base, handles). This involves documenting the external shape and its defining features in detail.</li>
           <li class="mb-3"><strong>2. Compare the form with known typologies</strong> — Consult regional and chronological literature to check similarities between your amphora and established types.</li>
@@ -83,6 +88,19 @@
           <li class="mb-3"><strong>5. Create a catalogue entry and academic description</strong> — Record the amphora following academic standards, including dimensions, morphology, typology, dating, and references suitable for publication.</li>
         </ul>
       </div>
+
+      <div class="column-is-4 pl-6">
+        <iframe 
+          width="400" 
+          height="400" 
+          src="https://www.youtube.com/embed/89rTqPcQzxk?autoplay=1&loop=1&mute=1&playlist=89rTqPcQzxk" 
+          title="YouTube Shorts Player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+        </iframe>
+      </div>
+
     </div>
   </section>
   
@@ -191,7 +209,7 @@
       </div>
     </div>
   </section>
-</div>
+</main>
 
 <!-- FOOTER -->
 <footer class="footer">
