--- a/documentation.html
+++ b/documentation.html
@@ -46,6 +46,7 @@
         <div class="navbar-dropdown">
           <a class="navbar-item" href="about.html">About</a>
           <a class="navbar-item" href="jobs.html">Jobs</a>
+          <a class="navbar-item" href="model-training.html">Model Training</a>
           <a class="navbar-item" href="contact.html">Contact</a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="https://docs.google.com/forms/d/e/1FAIpQLSfbTx27QH2m3SD-bia105rbArpOyCsnMBsDlagzJQ3V-eI3wA/viewform?usp=publish-editor" target="_blank">Report an issue</a>
@@ -150,8 +151,14 @@
           <div class="notification mt-6">
             <h4 class="title is-5">Neck Types</h4>
             <ul>
-              <li><strong>Short/Narrow:</strong> A compressed neck that is small in height and tighter than the rim.</li>
-              <li><strong>Long/Cylindrical:</strong> A tall, tube‑like neck with generally uniform width.</li>
+              <li>
+                <img src="img/filter/neck_shortNarrow.jpg" alt="Short/Narrow Neck" class="mr-2" style="width:40px; height:auto; vertical-align:middle;">
+                <strong>Short/Narrow:</strong> A compressed neck that is small in height and tighter than the rim.
+              </li>
+              <li>
+                <img src="img/filter/neck_cylindrical.jpg" alt="Long/Cylindrical Neck" class="mr-2" style="width:40px; height:auto; vertical-align:middle;">
+                <strong>Long/Cylindrical:</strong> A tall, tube‑like neck with generally uniform width.
+              </li>
               <li><strong>Concave:</strong> Neck curves inward, forming an hourglass‑like profile.</li>
               <li><strong>Wide/Trumpet:</strong> Broad upper neck that widens toward the rim.</li>
             </ul>
