--- a/catalogue.html
+++ b/catalogue.html
@@ -46,6 +46,7 @@
         <div class="navbar-dropdown">
           <a class="navbar-item" href="about.html">About</a>
           <a class="navbar-item" href="jobs.html">Jobs</a>
+          <a class="navbar-item" href="model-training.html">Model Training</a>
           <a class="navbar-item" href="contact.html">Contact</a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="https://docs.google.com/forms/d/e/1FAIpQLSfbTx27QH2m3SD-bia105rbArpOyCsnMBsDlagzJQ3V-eI3wA/viewform?usp=publish-editor" target="_blank">Report an issue</a>
