--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
 <section class="section">
   <div class="container">
     <a href="catalogue.html" class="button is-small is-link is-light">
-      <i class="fas fa-arrow-left mr-2"></i> Back to list
+      <i class="fas fa-arrow-left mr-2"></i> Back to catalogue
     </a>
 
     <div id="details" class="section"></div>
